# english-flashcards-2.0

./: AI_Handoff_Issue.md  Final_Verified_Requirements_Document.md  IMPLEMENTATION_SUMMARY.md  Phase_1_Research_and_Empathy.md  Phase_2_IA_and_LowFi.md  Phase_3_HiFi_Spec.md  Post_MVP_Ideas.md  Preliminary_Requirements_Document.md  README.md  SCREEN_SPECS_COMPLETION.md  System_Architecture_Package.md  UX_UI_Design_Package.md  a11y-report.html  docker-compose.yml  qa-checklist.md  shortcuts.md
.github/chatmodes/: ai_business_analyst.chatmode.md  (+4 more)
UXUI/: design-tokens.json
architecture/: Architecture_Package_Index.md  Phase_1_Analysis_and_Drivers.md  Phase_1_RTM_Mapping.md  Phase_2_HighLevel_Architecture.md  Phase_3_Summary.md  Phase_3_Technology_Selection_and_Infra.md  Phase_4_DB_and_API_Details.md  Phase_4_Final.md  Phase_4_Package_and_Runbook.md  Phase_4_SQLAlchemy_Model_Documentation.md  Phase_5_Deployment_and_Infra.md  Phase_5_Final.md  rtm_mapping.csv  rtm_mapping_columns.csv  rtm_reconciliation_phase1.md  stakeholder_checkpoint_summary.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  models.py  schemas.py
db/: schema.sql
design/: 01-Login.screen.md  08-AdminExports.screen.md  09-Settings.screen.md
diagrams/: c4-components.puml  c4-containers.puml  c4-system-context.puml  deployment-homelab.puml
openapi/: openapi.yaml
prototype/: README.md  index.html
scripts/: import_rtm.sh
smoke-tests/: README.md  dashboard-load.js  import-e2e.sh
work/: Unified Atomic Task Template (TK).md
(+54 files in other folders)
