[tool.poetry]
name = "english-flashcards-backend"
version = "0.1.0"
description = "Backend for English Flashcards MVP (FastAPI)"
authors = ["AI System Architect <arch@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95"
uvicorn = {extras = ["standard"], version = "^0.22"}
SQLAlchemy = "^2.0"
alembic = "^1.11"
pydantic = "^1.10"
argon2-cffi = "^21.3"
python-dotenv = "^1.0"
httpx = "^0.24"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
ruff = "^0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"